# log4cpp

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md  THANKS
include/: log4cpp.h
src/: CMakeLists.txt  log4cpp.cpp
